Remove width atribute to fix word wrapping

--- a/src/skins/vector/css/matrix-react-sdk/views/rooms/_RoomSettings.scss
+++ b/src/skins/vector/css/matrix-react-sdk/views/rooms/_RoomSettings.scss
@@ -48,7 +48,6 @@ limitations under the License.
     position: absolute;
     top: 110%;
     left: -26%;
-    width: 150%;
     padding: 2%;
     font-size: 10pt;
     line-height: 1.5em;
